bug 636666 - paste option doesn't appear in context menu for text boxes in content on android r=dougt a=blocking-fennec